tests/ui/transmute-ref-src-not-a-reference.stable.stderr
error[E0308]: mismatched types
  --> tests/ui/transmute-ref-src-not-a-reference.rs:15:49
   |
15 | const SRC_NOT_A_REFERENCE: &u8 = transmute_ref!(0usize);
   |                                  ---------------^^^^^^-
   |                                  |              |
   |                                  |              expected `&_`, found `usize`
   |                                  expected due to this
   |
   = note: expected reference `&_`
                   found type `usize`
help: consider borrowing here
   |
15 | const SRC_NOT_A_REFERENCE: &u8 = transmute_ref!(&0usize);
   |                                                 +

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
